--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "client",
+  "homepage": "https://Vlased.github.io/spdload-test/",
+  "name": "spdload-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/recoil": "^0.0.9",
     "@types/swiper": "^6.0.0",
+    "gh-pages": "^4.0.0",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +27,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
